--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A Vite + React application for GDG BIET" />
+    <meta name="description" content="A React Website for GDG BIET info website" />
     <meta name="keywords" content="React, Vite, GDG, BIET" />
     <meta name="author" content="Your Name" />
     <title>GDG_BIET</title>
